# ApacheBeamSubProcessProtobuf

./: .gitignore  Readme.md  build.gradle  settings.gradle
gradle/: profile.direct.gradle  profile.flink.gradle
src/main/CPlusPlus/: .gitignore  CMakeLists.txt  cprog.cc  ctest1.cc  ctest2.cc  deployBinary.sh  echo.code-workspace
src/main/java/io/exp/apachebeam/: MainClass.java
src/main/java/io/exp/apachebeam/example/: AddPerson.java  ListPeople.java
src/main/java/org/apache/beam/examples/subprocess/: ExampleEchoPipeline.java  SubProcessPipelineOptions.java
src/main/java/org/apache/beam/examples/subprocess/kernel/: SubProcessKernel.java
src/main/java/org/apache/beam/examples/subprocess/utils/: CallingSubProcessUtils.java  ExecutableFile.java  FileUtils.java
src/main/proto/: AddressBookProtos.proto
src/main/resources/: log4j.xml
src/test/java/org/apache/beam/examples/subprocess/: ExampleEchoPipelineTest.java
src/test/java/org/apache/beam/examples/subprocess/utils/: CallingSubProcessUtilsTest.java  ExecutableFileTest.java  FileUtilsTest.java
